--- a/angular-ecommerce/src/app/components/product-list/product-list-grid.component.html
+++ b/angular-ecommerce/src/app/components/product-list/product-list-grid.component.html
@@ -1,6 +1,10 @@
 <div class="main-content">
   <div class="section-content section-content-p30">
     <div class="container-fluid">
+      <div *ngIf="products?.length == 0" class="alert alert-warning" role="alert">
+        No products found
+      </div>
+      
       <div class="row">
 
         <div *ngFor="let tempProduct of products" class="col-md-3">
@@ -10,7 +14,10 @@
             <h1>{{tempProduct.name}}</h1>
             <div class="price">{{tempProduct.unitPrice | currency: 'USD'}}</div>
             <a href="#" class="btn btn-primary">Add to Cart</a>
+
           </div>
+
+
         </div>
       </div>
     </div>
