--- a/angular-ecommerce/src/app/components/product-list/product-list-grid.component.html
+++ b/angular-ecommerce/src/app/components/product-list/product-list-grid.component.html
@@ -1,9 +1,6 @@
 <div class="main-content">
   <div class="section-content section-content-p30">
     <div class="container-fluid">
-      <div *ngIf="products?.length == 0" class="alert alert-warning" role="alert">
-        No products found
-      </div>
 
       <div class="row">
 
@@ -24,8 +21,39 @@
           </div>
 
 
+
+        </div>
+        <div *ngIf="products?.length == 0" class="alert alert-warning" role="alert">
+          No products found
         </div>
       </div>
+
+      <!-- begin footer  -->
+
+      <div class="footer-pagination">
+        <div class="row">
+          <div class="col-md-6"></div>
+
+          <div class="col-md-6">
+            <div class="row">
+              <div class="col-md-9" style="padding-left: 30%">
+                  <ngb-pagination [(page)]="thePageNumber"
+                                  [pageSize]="thePageSize"
+                                  [collectionSize]="theTotalElements"
+                                  (pageChange)="listProducts()">
+                
+                  </ngb-pagination>
+
+              </div>
+            </div>
+          </div>
+
+        </div>
+
+      </div>
+      <!-- end footer -->
+
+
     </div>
   </div>
 </div>
