--- a/angular-ecommerce/src/app/components/product-list/product-list-grid.component.html
+++ b/angular-ecommerce/src/app/components/product-list/product-list-grid.component.html
@@ -37,12 +37,13 @@
           <div class="col-md-6">
             <div class="row">
               <div class="col-md-9" style="padding-left: 30%">
-                  <ngb-pagination [(page)]="thePageNumber"
-                                  [pageSize]="thePageSize"
-                                  [collectionSize]="theTotalElements"
-                                  (pageChange)="listProducts()">
-                
-                  </ngb-pagination>
+                <!-- ignore the error -->
+                <ngb-pagination [(page)]="thePageNumber" 
+                  [pageSize]="thePageSize"
+                  [collectionSize]="theTotalElements"
+                  (pageChange)="listProducts()">
+
+                </ngb-pagination>
 
               </div>
             </div>
