--- a/angular-ecommerce/src/app/components/checkout/checkout.component.html
+++ b/angular-ecommerce/src/app/components/checkout/checkout.component.html
@@ -1,3 +1,48 @@
 <div class="main-content">
-    <p>checkout works!</p>
+    <div class="section-content section-content-p30">
+        <div class="container-fluid">
+            <form [formGroup]="checkoutFormGroup" (ngSubmit)="onSubmit()">
+
+                <!-- customer form group -->
+                <div formGroupName="customer" class="form-area">
+                    <h3>Customer</h3>
+                    <div class="row">
+                        <div class="col-md-2"><label>First Name</label>
+                            <div class="col-md-9">
+                                <div class="input-space">
+                                    <input formControlName="firstName" type="text">
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-md-2"><label>Last Name</label>
+                            <div class="col-md-9">
+                                <div class="input-space">
+                                    <input formControlName="lastName" type="text">
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-md-2"><label>Email</label>
+                            <div class="col-md-9">
+                                <div class="input-space">
+                                    <input formControlName="email" type="text">
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+
+                </div>
+
+                <!-- sumbit button -->
+                <div class="text-center">
+                    <button type="sumbit" class="btn btn-info">Purchase</button>
+                </div>
+            </form>
+
+        </div>
+    </div>
 </div>
