--- a/angular-ecommerce/src/app/components/checkout/checkout.component.html
+++ b/angular-ecommerce/src/app/components/checkout/checkout.component.html
@@ -6,6 +6,7 @@
                 <!-- customer form group -->
                 <div formGroupName="customer" class="form-area">
                     <h3>Customer</h3>
+
                     <div class="row">
                         <div class="col-md-2"><label>First Name</label></div>
                         <div class="col-md-9">
@@ -14,6 +15,7 @@
                             </div>
                         </div>
                     </div>
+
                     <div class="row">
                         <div class="col-md-2"><label>Last Name</label></div>
                         <div class="col-md-9">
@@ -22,6 +24,7 @@
                             </div>
                         </div>
                     </div>
+                    
                     <div class="row">
                         <div class="col-md-2"><label>Email</label></div>
                         <div class="col-md-9">
@@ -30,6 +33,7 @@
                             </div>
                         </div>
                     </div>
+
                 </div>
 
                 <!-- Shiping Address -->
@@ -45,8 +49,8 @@
                                 </select>
                             </div>
                         </div>
-
                     </div>
+
                     <div class="row">
                         <div class="col-md-2"><label>Street</label></div>
                         <div class="col-md-9">
@@ -54,8 +58,8 @@
                                 <input formControlName="street" type="text">
                             </div>
                         </div>
-
                     </div>
+
                     <div class="row">
                         <div class="col-md-2"><label>City</label></div>
                         <div class="col-md-9">
@@ -63,8 +67,8 @@
                                 <input formControlName="city" type="text">
                             </div>
                         </div>
-
                     </div>
+
                     <div class="row">
                         <div class="col-md-2"><label>State</label></div>
                         <div class="col-md-9">
@@ -74,8 +78,8 @@
                                 </select>
                             </div>
                         </div>
-
                     </div>
+
                     <div class="row">
                         <div class="col-md-2"><label>Zip Code</label></div>
                         <div class="col-md-9">
@@ -83,7 +87,6 @@
                                 <input formControlName="zipCode" type="text">
                             </div>
                         </div>
-
                     </div>
 
                 </div>
@@ -109,8 +112,8 @@
                                 </select>
                             </div>
                         </div>
-
                     </div>
+
                     <div class="row">
                         <div class="col-md-2"><label>Street</label></div>
                         <div class="col-md-9">
@@ -118,8 +121,8 @@
                                 <input formControlName="street" type="text">
                             </div>
                         </div>
-
                     </div>
+
                     <div class="row">
                         <div class="col-md-2"><label>City</label></div>
                         <div class="col-md-9">
@@ -127,8 +130,8 @@
                                 <input formControlName="city" type="text">
                             </div>
                         </div>
-
                     </div>
+
                     <div class="row">
                         <div class="col-md-2"><label>State</label></div>
                         <div class="col-md-9">
@@ -138,8 +141,8 @@
                                 </select>
                             </div>
                         </div>
-
                     </div>
+
                     <div class="row">
                         <div class="col-md-2"><label>Zip Code</label></div>
                         <div class="col-md-9">
@@ -147,7 +150,6 @@
                                 <input formControlName="zipCode" type="text">
                             </div>
                         </div>
-
                     </div>
 
                 </div>
@@ -155,7 +157,79 @@
                 <!-- Credit Card -->
 
                 <div formGroupName="creditCard" class="form-area">
+                    <h3>Credit Card</h3>
 
+                    <div class="row">
+                        <div class="col-md-2"><label>Country</label></div>
+                        <div class="col-md-9">
+                            <div class="input-space">
+                                <select formControlName="cardType">
+                                    <option>Visa</option>
+                                    <option >Mastercard</option>
+                                </select>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="row">
+                        <div class="col-md-2"><label>Name on Card</label></div>
+                        <div class="col-md-9">
+                            <div class="input-space">
+                                <input formControlName="nameOnCard" type="text">
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="row">
+                        <div class="col-md-2"><label>Name on Card</label></div>
+                        <div class="col-md-9">
+                            <div class="input-space">
+                                <input formControlName="nameOnCard" type="text">
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="row">
+                        <div class="col-md-2"><label>Security Code</label></div>
+                        <div class="col-md-9">
+                            <div class="input-space">
+                                <input formControlName="securityCode" type="text">
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="row">
+                        <div class="col-md-2"><label>Expiration Month</label></div>
+                        <div class="col-md-9">
+                            <div class="input-space">
+                                <select formControlName="expirationMonth">
+                                    <option>TO DO</option>
+                                </select>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="row">
+                        <div class="col-md-2"><label>Expiration Year</label></div>
+                        <div class="col-md-9">
+                            <div class="input-space">
+                                <select formControlName="expirationYear">
+                                    <option>TO DO</option>
+                                </select>
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+
+                <!-- Order details -->
+
+                <div class="form-area">
+                    <h3>Review Your Order</h3>
+                    
+                    <p>Total Quantity: {{totalQuantity}}</p>
+                    <p>Shipping: Free</p>
+                    <p>Total Price: {{totalPrice | currency: 'USD'}}</p>
                 </div>
 
                 <!-- sumbit button -->
