--- a/angular-ecommerce/src/app/components/checkout/checkout.component.html
+++ b/angular-ecommerce/src/app/components/checkout/checkout.component.html
@@ -12,6 +12,19 @@
                         <div class="col-md-9">
                             <div class="input-space">
                                 <input formControlName="firstName" type="text">
+
+                                <div *ngIf="firstName?.invalid && (firstName?.dirty || firstName?.touched)"
+                                    class="alert alert-danger mt-1">
+
+                                    <div
+                                        *ngIf="firstName?.errors?.['required'] || firstName?.errors?.['notOnlyWhitespace']">
+                                        First Name is required
+                                    </div>
+                                    <div *ngIf="firstName?.errors?.['minlength']">
+                                        First Name must be at least 2 characters
+                                    </div>
+
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -21,15 +34,37 @@
                         <div class="col-md-9">
                             <div class="input-space">
                                 <input formControlName="lastName" type="text">
+                                <div *ngIf="lastName?.invalid && (lastName?.dirty || lastName?.touched)"
+                                    class="alert alert-danger mt-1">
+
+                                    <div
+                                        *ngIf="lastName?.errors?.['required'] || firstName?.errors?.['notOnlyWhitespace']">
+                                        Last Name is required
+                                    </div>
+                                    <div *ngIf="lastName?.errors?.['minlength']">
+                                        Last Name must be at least 2 characters
+                                    </div>
+
+                                </div>
                             </div>
                         </div>
                     </div>
-                    
+
                     <div class="row">
                         <div class="col-md-2"><label>Email</label></div>
                         <div class="col-md-9">
                             <div class="input-space">
                                 <input formControlName="email" type="text">
+                                <div *ngIf="email?.invalid && (email?.dirty || email?.touched)"
+                                    class="alert alert-danger mt-1">
+
+                                    <div *ngIf="email?.errors?.['required']">
+                                        Email is required
+                                    </div>
+                                    <div *ngIf="email?.errors?.['pattern']">
+                                        Email must be a valid email address
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -100,7 +135,7 @@
 
                 <div class="input-space">
                     <label class="au-checkbox">
-                        <input type="checkbox"(change)="copyShippingAddressToBillingAddress($event)">
+                        <input type="checkbox" (change)="copyShippingAddressToBillingAddress($event)">
                         <span class="au-checkmark"></span>Billling Address same as Shipping Address
                     </label>
                 </div>
@@ -145,7 +180,7 @@
                         <div class="col-md-2"><label>State</label></div>
                         <div class="col-md-9">
                             <div class="input-space">
-                                <select formControlName="state" >
+                                <select formControlName="state">
                                     <option *ngFor="let state of shippingAddressStates" [ngValue]="state">
                                         {{ state.name }}
                                     </option>
@@ -176,7 +211,7 @@
                             <div class="input-space">
                                 <select formControlName="cardType">
                                     <option>Visa</option>
-                                    <option >Mastercard</option>
+                                    <option>Mastercard</option>
                                 </select>
                             </div>
                         </div>
@@ -241,7 +276,7 @@
 
                 <div class="form-area">
                     <h3>Review Your Order</h3>
-                    
+
                     <p>Total Quantity: {{totalQuantity}}</p>
                     <p>Shipping: Free</p>
                     <p>Total Price: {{totalPrice | currency: 'USD'}}</p>
