--- a/angular-ecommerce/src/app/components/checkout/checkout.component.html
+++ b/angular-ecommerce/src/app/components/checkout/checkout.component.html
@@ -285,17 +285,25 @@
 
                 <!-- Credit Card -->
 
+
                 <div formGroupName="creditCard" class="form-area">
                     <h3>Credit Card</h3>
 
                     <div class="row">
-                        <div class="col-md-2"><label>Country</label></div>
+                        <div class="col-md-2"><label>Card Type</label></div>
                         <div class="col-md-9">
                             <div class="input-space">
                                 <select formControlName="cardType">
                                     <option>Visa</option>
                                     <option>Mastercard</option>
                                 </select>
+                                
+                                    <div *ngIf="creditCardType?.invalid && (creditCardType?.dirty || creditCardType?.touched)"
+                                        class="alert alert-danger mt-1">
+                                        <div *ngIf="creditCardType?.errors?.['required']">
+                                            Card Type is required
+                                        </div>
+                                    </div>
                             </div>
                         </div>
                     </div>
@@ -305,15 +313,38 @@
                         <div class="col-md-9">
                             <div class="input-space">
                                 <input formControlName="nameOnCard" type="text">
+                                <div *ngIf="creditCardNameOnCard?.invalid && (creditCardNameOnCard?.dirty || creditCardNameOnCard?.touched)"
+                                    class="alert alert-danger mt-1">
+                                    <div
+                                        *ngIf="creditCardNameOnCard?.errors?.['required'] || creditCardNameOnCard?.errors?.['notOnlyWhitespace']">
+                                        Name on Card is required
+                                    </div>
+                                    <div *ngIf="creditCardNameOnCard?.errors?.['minlength']">
+                                        Name on Card must be at least 2 characters
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
 
                     <div class="row">
-                        <div class="col-md-2"><label>Name on Card</label></div>
+                        <div class="col-md-2"><label>Card Number</label></div>
                         <div class="col-md-9">
                             <div class="input-space">
-                                <input formControlName="nameOnCard" type="text">
+                                <input formControlName="cardNumber" type="text">
+                                <div *ngIf="creditCardNumber?.invalid && (creditCardNumber?.dirty || creditCardNumber?.touched)"
+                                    class="alert alert-danger mt-1">
+                                    <div
+                                        *ngIf="creditCardNumber?.errors?.['required'] || creditCardNumber?.errors?.['notOnlyWhitespace']">
+                                        Card Number is required
+                                    </div>
+                                    <div *ngIf="creditCardNumber?.errors?.['pattern']">
+                                        Card Number must be a number
+                                    </div>
+                                    <div *ngIf="creditCardNumber?.errors?.['minlength']">
+                                        At least 16 characters
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -323,9 +354,24 @@
                         <div class="col-md-9">
                             <div class="input-space">
                                 <input formControlName="securityCode" type="text">
+                                <div *ngIf="creditCardSecurityCode?.invalid && (creditCardSecurityCode?.dirty || creditCardSecurityCode?.touched)"
+                                    class="alert alert-danger mt-1">
+                                    <div
+                                        *ngIf="creditCardSecurityCode?.errors?.['required'] || creditCardSecurityCode?.errors?.['notOnlyWhitespace']">
+                                        Security Code is required
+                                    </div>
+                                    <div *ngIf="creditCardSecurityCode?.errors?.['pattern']">
+                                        Security Code must be a number
+                                    </div>
+                                    <div *ngIf="creditCardSecurityCode?.errors?.['minlength']">
+                                        At least 3 characters
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
+                    
+
 
                     <div class="row">
                         <div class="col-md-2"><label>Expiration Month</label></div>
@@ -336,6 +382,8 @@
                                         {{ month }}
                                     </option>
                                 </select>
+
+  
                             </div>
                         </div>
                     </div>
