--- a/angular-ecommerce/src/app/components/login-status/login-status.component.html
+++ b/angular-ecommerce/src/app/components/login-status/login-status.component.html
@@ -8,4 +8,6 @@
 
     <button *ngIf="isAuthenticated" (click)="logout()" class="security-btn">Logout</button>
 
+    <button routerLink="/member"  class="security-btn ml-1">Member</button>
+
 </div>
