--- a/angular-ecommerce/src/app/components/cart-details/cart-details.component.html
+++ b/angular-ecommerce/src/app/components/cart-details/cart-details.component.html
@@ -45,7 +45,8 @@
                                 </div>
                             </div>
 
-                            <button (click)="remove(tempCartItem)" class="btn btn-primary btn-sm ">Remove</button>
+                            <button class="buttonx button2" a routerLink="/checkout" (click)="remove(tempCartItem)" >Remove</button>
+
                             <!-- TODO: Remove button has some show bug -->
                             <p class="mt-2">Subtotal: {{ tempCartItem.quantity*tempCartItem.unitPrice
                                 |currency: 'USD'}}</p>
@@ -58,7 +59,7 @@
                             <p>Shipping: FREE</p>
                             <p>Total Price: {{ totalPrice | currency: 'USD'}}</p>
                             <!-- TODO: Checkout button has css shown bug fix it  -->
-                            <a routerLink="/checkout" class="btn btn-primary">Checkout</a>
+                            <button class="button button2" a routerLink="/checkout" >Checkout</button>
                         </td>
                 </table>
             </div>
